    pressing the "XPath expression" button on the Flow Details dialog for
    tasks with OR and XOR splits.
  * Enhanced the editor so it scrubs away redundant old ports that were being left behind
    as a result of the bug-fix of excessive ports being created on loads previous to the 
    1.4.5 release.
  * Upgraded editor to use JGraph 5.9.2.2 and Proguard 3.8.

Version 1.4.5 (27/04/2007) "Blobby"
  * The editor has been upgraded to now use Engine Beta 8.2.
  * The editor has been upgraded to now use Jgraph 5.9.2.1.
  * Enhanced the editor so that it no longer specifically needs the flow button 
    on the palette. Now, so long as you have a task or condition button depressed,
    flows can be drawn simply by hovering over an element's valid ports and dragging
    between elements. You will now drag elements instead of creating new ones when
    left-clicking an exisiting element on the net. 
  * Now, when a user selects a single task, the palette menu expands to allow the use to modify the
    split and join decorators for the task, without having to go to the popup menu for the task.
  * Fixed a bug where a graph that was scaled would stop the user from being able to draw flows between elements.
  * Now, on the label Element dialog, hitting enter in the label field will do the same as pressing the done button. 
    This is a user convenience for quickly making label changes.
  * The upgrade to 5.9.2 of JGraph broke certain cut and paste behaviour.  This is now fixed to work with the 
    latest JGraph.
  * Altered how text is positioned with respect to the graphs upon export to PNG, JPG and print jobs.  The text
    should now appear above the graph without writing over the top of it.
  * Save files are now saved to a temporary file first and then copied to the final specified file name. If there is
    an editor crash whilst saving, only the temporary file will be corrupted.